--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,12 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
