--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,14 @@ apply plugin: "kotlin-android"
 
 apply plugin: "com.facebook.react"
 
+// Show build message
+println ""
+println "🚀 Thank you for using react-native-turbo-preferences!"
+println ""
+println "Made with ❤️ by hamzamekk"
+println "⭐ Support the project with a star: https://github.com/hamzamekk/react-native-turbo-preferences"
+println ""
+
 def getExtOrIntegerDefault(name) {
   return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["TurboPreferences_" + name]).toInteger()
 }
